2015-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Add abstraction: TAKE_STR

	* libpq.c (TAKE_STR): New #define, bifurcated on ‘GI_LEVEL (1, 9)’.
	(pg_lo_read): Use ‘TAKE_STR’.

2015-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Silence "discards ‘const’ qualifier" warning.

	* libpq.c (drop_paramspecs): ...here,
	by casting free(3) arg through ‘void *’.

2015-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[slog] Avoid ‘apply-to-args’.

	* postgres-table.scm (compile-outspec three-part): New proc.
	(compile-outspec munge): Use ‘three-part’.

2015-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Add abstraction: OFF_T

	* gi.h (OFF_T): New #define, bifurcated on ‘GI_LEVEL (1, 9)’.
	* libpq.c (lob_seek): Use ‘OFF_T’ in decl and definition.

2015-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Use ‘KEYWORD’ from Guile-BAUX.

	* libpq.c (pg_conndefaults): ...here.

2015-01-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[omm] Allow string COMPOSED for ‘define-db-col-type-array-variant’.

	* postgres-types.scm (define-db-col-type-array-variant):
	...here, converting it internally to a symbol if necessary.
	<top-level>: Use string in ‘define-db-col-type-array-variant’
	calls for ‘text[]’, ‘text[][]’, ‘int4[]’ and ‘aclitem[]’.

2015-01-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Convert array type names from trailing "[]" to leading "*".

	* postgres-meta.scm (*class-defs*): ...here.

2015-01-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Add abstraction: DECLARE_SMOB_NAME

	* libpq.c (DECLARE_SMOB_NAME): New macro.
	(xc_name, lob_name, res_name, sepo_name): Use it.

2015-01-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Convert array type names from trailing "[]" to leading "*".

	* postgres-meta.scm (infer-defs): ...here, in doc-comment.

2015-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘type-sql-name’ more.

	* postgres-table.scm: Import ‘(database postgres-types) type-sql-name’.
	(pgtable-manager create): Use ‘type-sql-name’.