@@ -1,3 +1,13 @@
+2015-01-12  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[pq slog] Use ‘scm_new_port_table_entry’.
+
+	Suggested by Ludovic Courtès:
+	<http://lists.gnu.org/archive/html/guile-user/2015-01/msg00037.html>.
+
+	* libpq.c (scm_new_port_table_entry) [!GI_LEVEL_1_8]: New static func.
+	(lob_mklobport): ...here.
+
 2015-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[pq slog] Add abstraction: TAKE_STR
